kubernetes/k3s-01/workloads/kube-prometheus-stack/middleware-ipallowlist.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: kube-prometheus-stack-ipallowlist
  namespace: monitoring
spec:
  ipAllowList:
    sourceRange:
      - 172.16.0.2
      - 192.168.10.3
      - 192.168.10.4
      - 192.168.20.3
