kubernetes/k3s-01/workloads/kube-prometheus-stack/ingress-route-grafana.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: monitoring
          name: kube-prometheus-stack-ipallowlist
      services:
        - name: kube-prometheus-stack-grafana
          kind: Service
          port: 80
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: grafana-certificate
