kubernetes/k3s-01/workloads/kube-prometheus-stack/ingress-route-prometheus.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.47fc5c.com`)
      kind: Rule
      middlewares:
        - namespace: monitoring
          name: kube-prometheus-stack-ipallowlist
      services:
        - name: kube-prometheus-stack-prometheus
          kind: Service
          port: 9090
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: prometheus-certificate
